[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.5",
    "langchain-groq>=0.3.5",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.5.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]


[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
fixable = ["I001"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
